디자인 개선

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,11 @@ dependencies:
   fl_chart: ^1.0.0
   fluttertoast: ^8.2.6
   hawk_fab_menu: ^1.2.0
+  animations: ^2.0.11
+  glass_kit: ^3.0.0
+  shimmer: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
