--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,17 +20,18 @@ dependencies:
   fluttertoast: ^8.2.6
   hawk_fab_menu: ^1.2.0
   animations: ^2.0.11
-  glass_kit: ^3.0.0
+  glass_kit: ^4.0.1
   shimmer: ^3.0.0
   flutter_staggered_animations: ^1.1.1
   cached_network_image: ^3.3.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
