--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   cached_network_image: ^3.3.1
   google_fonts: ^6.2.1
+  speech_balloon: ^0.0.3
 
 dev_dependencies:
   flutter_test:
