--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
+  flutter_hsvcolor_picker: ^1.5.0
 
 dev_dependencies:
   flutter_test:
