--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
   flutter_hsvcolor_picker: ^1.5.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
